# SolanaActions

./: .gitignore  Cargo.toml  README.md
plugins/blinks/: Cargo.toml
plugins/defi/: Cargo.toml
plugins/nft/: Cargo.toml
plugins/token/: Cargo.toml
plugins/token/src/: lib.rs
solana_actions_core/: Cargo.toml
solana_actions_core/src/: actions.rs  agent.rs  defi_actions.rs  lib.rs  misc_actions.rs  nft_actions.rs  token_actions.rs  wallet.rs
