[workspace]
resolver = "2"
members = [
    "solana_actions_core",
    "plugins/token",
    "plugins/nft",
    "plugins/defi",
    "plugins/misc",
    "plugins/blinks",
]

[workspace.dependencies]
# List common dependencies here to ensure all crates use the same version.
# Solana Crates
solana-sdk = "1.18.1"
solana-client = "1.18.1"
solana-program = "1.18.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }

# Async & Utilities
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.77"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
bs58 = "0.5.0"
reqwest = { version = "0.12.2", features = ["json"] }
url = "2.5.0"
bigdecimal = "0.4.3"

# Your own crates
solana_actions_core = { path = "solana_actions_core" }
solana-actions-token = { path = "plugins/token" }