[package]
name = "solana_actions_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Inherit versions from the main workspace
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
mpl-token-metadata = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
bigdecimal = { workspace = true }

# Define this crate's dependency on the token plugin
solana-actions-token = { path = "../plugins/token" }
base64 = "0.21"
bincode = "1.3"
urlencoding = "2.1"